[package]
name = "weather"
version = "0.1.0"
authors = ["Aynur Maksutov <maksutov_aynur@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thruster = "^1.0.3"
tokio = "^0.2.25"
serde = "^1.0.0"
serde_json = "^1.0.0"
serde_derive = "^1.0.0"
